Add if/else expression