@@ -25,6 +25,7 @@ test {
             '--add-exports', 'org.graalvm.truffle/com.oracle.truffle.api.dsl=ALL-UNNAMED',
             '--add-exports', 'org.graalvm.truffle/com.oracle.truffle.api.profiles=ALL-UNNAMED',
             '--add-exports', 'org.graalvm.truffle/com.oracle.truffle.api.frame=ALL-UNNAMED',
+            '--add-exports', 'org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED',
             "-Dtruffle.class.path.append=" + sourceSets.main.java.classesDirectory.get().asFile,
             "-Dgraalvm.locatorDisabled=true"
     ]
